--- a/Content/Other/Handover to Ferry.htm
+++ b/Content/Other/Handover to Ferry.htm
@@ -3,10 +3,100 @@
     <head>
     </head>
     <body>
-        <h1>Handover to Ferry</h1>
-        <p>Indication whether the wagon may be used on ferries between Great Britain and Continental Europe</p>
-        <p>Maximum allowed angle of the ferry ramp (in grades: °) </p>
-        <p>No restrictions apply to two-axle wagons. Three-axle wagons must be able to negotiate the curves on board the ships </p>
-        <p>Wagons with two- or three-axle bogies are accepted  for unrestricted conveyance by ferry provided they are able to negotiate both the maximum ferry ramp angle and the on-board curves</p>
+        <h1>Handover to Ferry </h1>
+        <p>Most goods shipped by rail to ports are routed to harbour loading quays or port terminals, depending on their type and transfer method  to the ship.  In Europe, some trains are run to ports in rail-ferry communication. In the both cases of exceptional consignment trains to a port, it is necessary to:</p>
+        <ul>
+            <li>ascertain to which specific tracks in the port area the train with the exceptional consignment is to be directed,</li>
+            <li>inquire whether  exceptional consignment approval is also granted by the port infrastructure managers for this type of consignment.</li>
+        </ul>
+        <h2>Definition</h2>
+        <p>Consignments which are to be transshipped to a ferry, when they do not meet the regulations of General Contract of Use of wagons (<MadCap:glossaryTerm glossTerm="RailGlossary.Term33">GCU</MadCap:glossaryTerm>), Appendix 14, Part A constitute the other type of exceptional consignment. </p>
+        <h2>Use Cases</h2>
+        <p>Rail-ferry  transfer locations and specific rules are listed in Part A of GCU&#160;Annex 14. Each  port and ferry has individual characteristic of  access for a train and therefore some restrictions apply which wagon must fulfil to be accepted on a ferry. Observe wagon marking:</p>
+        <table style="width: 100%;">
+            <col style="width: 217px;" />
+            <col />
+            <col />
+            <tbody>
+                <tr>
+                    <td>Sign on a wagon</td>
+                    <td>Sign template</td>
+                    <td>Description</td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="../Resources/Images/Assets/Images/im_curve-radius.jpg" alt="Photo of wagon sign minimal radius 75 meters" title="Minimal radius" />
+                    </td>
+                    <td>
+                        <img src="../Resources/Images/Assets/Graphics/gph_minimal-radius.png" title="Radius in meters" alt="Wagon sign -able to negotiate curves with a radius greater than in meters" />
+                    </td>
+                    <td>
+                        <p>Sign for bogie wagons only able to negotiate curves with a radius greater</p>
+                        <p>than 35 m.Indicates the minimum curve radius that the wagon can negotiate.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="../Resources/Images/Assets/Images/im_ramp-angle.jpg" title="Maximum ramp angle" alt="Sign of maximum ramp angle of one degree and thirty angle minutes" />
+                    </td>
+                    <td>
+                        <img src="../Resources/Images/Assets/Graphics/gph_ramp-angle.png" title="Angle in degrees and minutes" alt="Sign of angle with degree and minutes symbols" />
+                    </td>
+                    <td>sign applied on wagons on bogies that when entering a ferry, can only 
+negotiate a ramp angle of less than 2°30‘. The marking specifies the 
+maximum negotiable ramp angle.</td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="../Resources/Images/Assets/Images/im_ferry-anchor.jpg" title="Can be used for ferry communication" alt="Photo of anchor sign on the wagon" />
+                    </td>
+                    <td>
+                        <img src="../Resources/Images/Assets/Graphics/gph_ferry-acnchor.png" title="Ferry communication sign" alt="Sign of anchor for ferry communication" />
+                    </td>
+                    <td>For wagons accepted on ferries and 
+authorised to run in Great Britain.</td>
+                </tr>
+            </tbody>
+        </table>
+        <p>In these cases of wagons transfer to ferries the restrictions include also necessity for obtaining an exceptional consignment authorisation:</p>
+        <ul>
+            <li>wagons with two- or three-axle bogies that do not meet the GCU&#160;Appendix 14 Part A</li>
+            <li>wagons with bogies that have more than three axles</li>
+            <li>shipments carried on more than one wagon</li>
+            <li>goods carried on two wagons coupled together</li>
+            <li>loads carried with a buffer wagon</li>
+        </ul>
+        <h2> Consignment Application</h2>
+        <table style="width: 100%;">
+            <col />
+            <col />
+            <tbody>
+                <tr>
+                    <td>Code</td>
+                    <td>Declare in application </td>
+                </tr>
+                <tr>
+                    <td>#26</td>
+                    <td>Harbour loading quay</td>
+                </tr>
+                <tr>
+                    <td>#28</td>
+                    <td>
+                        <p>Smallest negotiable track radius (in meters)<br />Maximum permissible bending angle (in degrees) when running onto ferry boat flaps</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <li>#29</li>
+                    </td>
+                    <td>
+                        <p>These consignments may not be subject to hump or fly shunting, nor may they collide with other vehicles that have been fly or hump shunted.
+<br />Trains including these transport units may not be pushed.
+<br />Wagon group must not be separated
+(for shipments on more than one wagon)</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
