--- a/Content/Other/Other National Rules.htm
+++ b/Content/Other/Other National Rules.htm
@@ -4,6 +4,78 @@
     </head>
     <body>
         <h1>Other National Rules</h1>
-        <p>Delete this text and replace it with your own content.</p>
+        <p>Basic regulations concerning exceptional consignments agreed by all UIC&#160;members are set in UIC&#160;IRS 50502. The IRS document also stipulates that, in some countries, the networks of certain managers are governed by rules different from those set out in the IRS. However, not all deviations from the rules are mentioned in this document. Therefore, in addition to the rules described in the IRS, it is necessary to familiarise yourself in detail with the technical and operational rules of the network in question and the network manager's instructions for exceptional consignments before preparing an application for an exceptional transport authorisation.</p>
+        <h2>IRS&#160;50502, Appendix A: Alternative Provisions</h2>
+        <p>List with alternative provisions includes reference to passage of text in the IRS, type of provision described as a definition or an addition, and the rules itself. These rules apply to:</p>
+        <ul>
+            <li>flexible load units loaded on more than two wagons are standard consignment on certain railways when moved taking into account the loading examples provided in the UIC Loading Guidelines: </li>
+            <li>For block trains: SZDC (CZ), DB, SBB, ZSR (SK), ProRail (NL), MAV, CFL, GySEV</li>
+            <li> For wagon load traffic: DB, SBB </li>
+            <li>Loaded on three wagons of max. length 36m: RFI (FS)</li>
+            <li>vehicles running on their own wheels if they do not have the required interoperability in a country that forms part of the route (ŽSR network, Slovakia)</li>
+            <li>exceeding the overhaul period by up to 5 years on the RFI&#160;network (Italy)</li>
+            <li>transport following expiry of validity of the transport authorisation.</li>
+        </ul>
+        <h2>IM's alternative provisions</h2>
+        <p>There is currently no single source where all alternative definitions for other types of exceptional consignments are described. Listed below are some examples of rules that apply on selected IM's networks in addition to Appendix A from the IRS document. For these cases you also apply for exceptional consignments authorisations. For other IM's make sure you know thoroughly their rules. For other IM's make sure you know thoroughly their applicable rules. </p>
+        <table style="width: 100%;">
+            <col />
+            <col />
+            <col />
+            <col />
+            <tbody>
+                <tr>
+                    <td>Country </td>
+                    <td>Network</td>
+                    <td>Consignment</td>
+                    <td>Rule's brief</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center;">AT</td>
+                    <td style="text-align: center;">OeBB</td>
+                    <td style="text-align: center;">vehicle</td>
+                    <td> for which the due date for the next overhaul has been exceeded by more than 5 years</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center;">IT</td>
+                    <td style="text-align: center;">RFI</td>
+                    <td style="text-align: center;">vehicle</td>
+                    <td>articulate wagons series Sdgg... when transporting <MadCap:glossaryTerm glossTerm="RailGlossary.Term32">RID</MadCap:glossaryTerm> goods</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center;">PL</td>
+                    <td style="text-align: center;">PKP&#160;PLK</td>
+                    <td style="text-align: center;">goods</td>
+                    <td>weighing more than 60 t which cannot be transported to the destination station without being transhipped
+. </td>
+                </tr>
+                <tr>
+                    <td style="text-align: center;">PL</td>
+                    <td style="text-align: center;">PKP&#160;PLK</td>
+                    <td style="text-align: center;">vehicle</td>
+                    <td>vehicles authorised on a limited basis: eg. moved with speed restriction while removed from the inventory or while with an overdue period of periodic revision.</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center;">PL</td>
+                    <td style="text-align: center;">PKP&#160;PLK</td>
+                    <td style="text-align: center;">vehicle</td>
+                    <td>wheels with diameter Ø &lt; 840 mm, also these marked with RIV, TEN or RIC.</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center;">PL</td>
+                    <td style="text-align: center;">PKP&#160;PLK</td>
+                    <td style="text-align: center;">vehicle</td>
+                    <td>special construction wagon over eight axles.</td>
+                </tr>
+            </tbody>
+        </table>
+        <h2>Train Length - Special Case</h2>
+        <p>Maximum train length as such <u>is not a reason for exceptional consignment train</u>. As a rule the train length shall in all cases be shorter than the effective length of the tracks present at departure, overtaking and arrival  for which the train is planned. While agreeing the conditions for exceptional transport, especially in international traffic keep in mind that route-specific length restrictions may also apply on:</p>
+        <ul>
+            <li>first mile (service infrastructure, terminal's and ports infrastructure),</li>
+            <li>border routes (specified in border agreements with neighbour infrastructure),</li>
+            <li>last mile  (service infrastructure, terminal's and ports infrastructure).</li>
+        </ul>
+        <p>When planning the route, take into account the shortest allowed train length on the entire planned route. May be the train has to be split somewhere (e.g. for loading or unloading the train set because of loading ramp length). If so, you may need  to request a path for exceptional consignment which enables train split, and is not  treated as an additional permit just for the train split.</p>
     </body>
 </html>
