--- a/Content/Other/Rigid Load Units.htm
+++ b/Content/Other/Rigid Load Units.htm
@@ -4,6 +4,112 @@
     </head>
     <body>
         <h1>Rigid Load Units</h1>
-        <p>Trains including these transport units may not be pushed.</p>
+        <p>In exceptional transports goods are usually considered while loaded on individual wagons. Goods longer than the maximum loading length of the wagon, and beyond the wagon length can also be transported by rail, when some restrictions are observed. Restrictions for long goods exceeding wagon loading length vary depending on the flexibility of the load.</p>
+        <h2>Definition</h2>
+        <p><b>Rigid long goods</b> are transported as as <b>exceptional consignment</b> when they are loaded on special <b>wagons with pivoted bolster</b> or <b>rotary sliding bolster</b>, and if necessary also with barrier/intermediate wagons.</p>
+        <h2>Consignment Data</h2>
+        <p>Compare rigid consignment parameters with the:</p>
+        <ul>
+            <li> <a href="../Resources/PDFSourceFiles/typovy-vykres_scmms-10.pdf" title="Scmms" alt="Link to bolster wagon information sheet">bolster wagon information sheet</a></li>
+            <li>sample wagon data on the wagon<img src="../Resources/Images/Assets/Images/im_bolster-wagon-loaded.jpg" title="Photo by PetrS., CC BY-SA 3.0 - Scmms2011plzen2" alt="Loaded with still profiles bolster wagon, Scmms  photo by PetrS., CC BY-SA 3.0 " /></li>
+            <li>loading scheme below</li>
+        </ul>
+        <p>
+            <img src="../Resources/Images/Assets/Graphics/im_bolster-wagon-rigd-loaded.png" title="CD Cargo series Smmcs pivoted bolster wagons" alt="Graphic of rigid long pipes loaded on two pivoted bolster wagons series Smmcs " />
+        </p>
+        <h2>Consignment Application</h2>
+        <table style="width: 100%;">
+            <col />
+            <col />
+            <tbody>
+                <tr>
+                    <td>Code</td>
+                    <td>Declare in application </td>
+                </tr>
+                <tr>
+                    <td>#2b</td>
+                    <td>Wagons with authorisation plate (have no RIV nor TEN marking)</td>
+                </tr>
+                <tr>
+                    <td>#3</td>
+                    <td>Bolster pivot pins distance</td>
+                </tr>
+                <tr>
+                    <td>#4</td>
+                    <td>Bogies pivot pin distance</td>
+                </tr>
+                <tr>
+                    <td>#5</td>
+                    <td>All axles for the wagon group</td>
+                </tr>
+                <tr>
+                    <td>#6a</td>
+                    <td>Summed up length of the pivot bolster wagon group</td>
+                </tr>
+                <tr>
+                    <td>#7</td>
+                    <td>Individual tare of each wagon </td>
+                </tr>
+                <tr>
+                    <td>#8</td>
+                    <td>The total mass of the load on the wagon group</td>
+                </tr>
+                <tr>
+                    <td>
+                        <li>#11 </li>
+                    </td>
+                    <td>The total length of the load on two wagons</td>
+                </tr>
+                <tr>
+                    <td>
+                        <li>#14</li>
+                    </td>
+                    <td>Load length between the both bolsters pivots</td>
+                </tr>
+                <tr>
+                    <td>
+                        <li>#15</li>
+                    </td>
+                    <td>Load length beyond the bolster pivots.</td>
+                </tr>
+                <tr>
+                    <td>
+                        <li>#19</li>
+                    </td>
+                    <td>The centre of gravity of the load must be located between the swivelling/sliding-swivelling bolsters and above the longitudinal axis of the wagon.</td>
+                </tr>
+                <tr>
+                    <td>
+                        <li>#29</li>
+                    </td>
+                    <td>
+                        <p>These consignments may not be subject to hump or fly shunting, nor may they collide with other vehicles that have been fly or hump shunted.
+<br />Trains including these transport units may not be pushed.
+<br />Wagon groups must not be separated
+</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <h2>Load Overhang</h2>
+        <p>Rigid goods which overhang over the coupling zone may swing out further than the wagon body when the wagon runs on the curved tracks. This is why it is necessary to reduce the width of the load overhang in order to take load's tilt out into account while examining consignment’s conformity with the requested path. </p>
+        <p>You deal with normal rigid long consignment when it :</p>
+        <p>[image/ graph/ add]</p>
+        <ul>
+            <li>is loaded on one wagon</li>
+            <li>protrudes over the maximum loading length </li>
+            <li>protrudes over the coupling zone, </li>
+            <li>it's overhang measured longitudinally from the bogie pivot axis till the front or end edge the load does not exceed the length of 10 m</li>
+            <li>is transported with protection wagon</li>
+        </ul>
+        <p>In addition in such a case always examine:</p>
+        <ul>
+            <li> that the load width restrictions which are set in UIC Loding Guidlines Tables are observed, </li>
+            <li>the larger value of the overhang, when the load overhangs on both ends of the wagon.</li>
+        </ul>
+        <ul>
+            <li>axle load values especially when center of the load gravity is if the centre of gravity is displaced along the wagon in relation to the central intersection of the three axes of symmetry of the wagon under consideration.</li>
+        </ul>
+        <li>Above checks are necessary to conduct since of these loads due to their length and width dimensions and because of shifted center of gravity may become as reasons for exceptional consignments with out of gauge or as heavy transports. </li>
     </body>
 </html>
