--- a/Content/Other/Transhipment.htm
+++ b/Content/Other/Transhipment.htm
@@ -3,8 +3,76 @@
     <head>
     </head>
     <body>
-        <h1>Transhipment</h1>
-        <p>&#160;</p>
-        <p>Load units to be transhipped if they weigh more than 25 t or are loaded on low-loader wagons (only applies for the transhipment to railways with different track gauges)</p>
+        <h1>Transhipment to railways with different track gauges</h1>
+        <h2>Definition</h2>
+        <p>Load units to be transhipped if they weigh more than 25 t or are loaded on low-loader wagons (only applies for the transhipment to railways with different track gauges).</p>
+        <h2>Reasons for exceptional transport conditions</h2>
+        <p>This rule for exceptional consignments applies when shipment is transferring between   <MadCap:glossaryTerm glossTerm="RailGlossary.Term36">broader gauges</MadCap:glossaryTerm>, tracks such as:</p>
+        <ul>
+            <li>Iberian Gauge: 1668 mm ( Spain and Portugal)</li>
+            <li>Russian Gauge: 1520 mm (countries of the former Soviet Union) inclusive of Estonia (old tracks), Latvia, Lithuania,  Moldova and Ukraine</li>
+        </ul>
+        <p>and <MadCap:glossaryTerm glossTerm="RailGlossary.Term35">standard gauge</MadCap:glossaryTerm> 1435 mm (majority of continental Europe).</p>
+        <p>Three reasons why trashipment of goods heavier than 25 t is exceptional:</p>
+        <ol>
+            <li><b>Vehicles  characteristics</b> - standard gauge wagons have different geometrical characteristic than broad gauge wagons. Therefore they cannot simply change the tractive unit and carry on on the standard tracks. Broad gauge wagons 1520 mm use different coupling and braking systems than standard gauge wagons. Broad gauge wagons in order to enter standard gauge track would have to have their wheelset spacing adjusted to 1435 mm.  In most cases broad gauge wagons do not have systems for an automatic wheelset spacing change. In addition they are  too big to enter standard gauge network. Load transshipment onto standard track wagons is therefore preferred option to choose.</li>
+            <li><b>Loading gauge restriction</b> - goods loaded on broad gauge wagons might be a normal consignment on broad gauge railnetwork. After transhipment onto standard wagons and while on a standard track rail network they may become out of gauge loads. For example loaded ISO&#160;High Cube containers while transported on standard gauge wagons they become out of gauge exceptional consignments.</li>
+            <li><b>Complexity of transhipment</b> - it arises from two main factors. Firstly, the diverse range of load types  weighing over 25 tons, combined with various transhipment technologies. Secondly, the varying quality of transhipment facilities and differences in transport regulations contribute to the overall complexity of transhipment operation from wagon to wagon.</li>
+        </ol>
+        <h3>Use Cases</h3>
+        <p>[To be added]</p>
+        <h2>Consignment Application</h2>
+        <table style="width: 100%;">
+            <col />
+            <col />
+            <tbody>
+                <tr>
+                    <td>Code</td>
+                    <td>Declare in application </td>
+                </tr>
+                <tr>
+                    <td>
+                        <li>#12-15</li>
+                    </td>
+                    <td>Critical points for out-of-gague (optional), for #13 specify if the height is measured from top of the rail (13a) or solely for of the good itself (13b)</td>
+                </tr>
+                <tr>
+                    <td>
+                        <li>#19</li>
+                    </td>
+                    <td>
+                        <p>Center of gravity location declaration</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>#22</td>
+                    <td>Transhipment destination station (and further on XXXX mm tracks to final destination)</td>
+                </tr>
+                <tr>
+                    <td>#23</td>
+                    <td>Specify the track gauge train will run within the border area.</td>
+                </tr>
+                <tr>
+                    <td>#25</td>
+                    <td>Customs station (only when customs are dealt with nor at the frontier station nor the destination station.)</td>
+                </tr>
+                <tr>
+                    <td>#27</td>
+                    <td>Freight payer at the transhipment station.</td>
+                </tr>
+                <tr>
+                    <td>
+                        <li>#29</li>
+                    </td>
+                    <td>
+                        <p>For loads in low-loader wagons </p>
+                        <p>These consignments may not be subject to hump or fly shunting, nor may they collide with other vehicles that have been fly or hump shunted.
+<br />Trains including these transport units may not be pushed.
+<br />Wagon groups must not be separated
+</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
