--- a/Content/Other/Handover to Ferry.htm
+++ b/Content/Other/Handover to Ferry.htm
@@ -42,7 +42,7 @@
                     <td>
                         <img src="../Resources/Images/Assets/Graphics/gph_ramp-angle.png" title="Angle in degrees and minutes" alt="Sign of angle with degree and minutes symbols" />
                     </td>
-                    <td>sign applied on wagons on bogies that when entering a ferry, can only 
+                    <td>Sign applied on wagons on bogies that when entering a ferry, can only 
 negotiate a ramp angle of less than 2°30‘. The marking specifies the 
 maximum negotiable ramp angle.</td>
                 </tr>
