--- a/Content/Out-of-Gauge/Critical Points.htm
+++ b/Content/Out-of-Gauge/Critical Points.htm
@@ -7,17 +7,21 @@
         <h1>Critical Points</h1>
         <p>Wagon with payload or vehicle cross-sectional features that are likely to be of significance to  gauge check shall be identified as critical points. Critical points  are to be declared only where the loading gauges is fouled.<br /></p>
         <p>If the payload has a complicated shape a sketch of the consignment in the three views should be attached showing al the critical points for the consignment and the position of the centre of gravity. </p>
-        <p>Critical points exceeding the international loading gauge that where measured without tolerance on the load are described by capital letters A, B, C … on the sketches.</p>
+        <p>On the sketch the critical points exceeding the international loading gauge that where measured without tolerance on the load shall be indicated by capital letters A, B, C. Letters allocation starts at the lower left and continues in a clockwise direction.</p>
         <p>The coordinates of the critical points of the load are determined by taking measurements on both sides of the wagon while the wagon is stationary on straight and level track.</p>
-        <p>Basic parameters of X-shaped consignments include:</p>
+        <p>Basic parameters of cube-shaped consignments include:</p>
         <p>1) height - vertically from the top surface of the rail head, separately for each inflection point of the load contour;</p>
         <p>2) width - horizontally from the longitudinal axis of the wagon to the edge of the load at each inflection point of its contour. </p>
         <p>image<br /></p>
-        <p>For more complicated contours </p>
-        <p>For symmetrical contours points may be assigned on one half-width and copied to  the other. Critical Point Letters are assigned from the bottom to the top of the consignment.</p>
-        <p>For non-symmetrical contours points are assigned separately for the left and for the right side of the contour. Critical Point letters are assigned from the bottom left -half of the consignment to the top and the from the top to the bottom of the right-half. </p>
+        <p>For more complicated contours:</p>
+        <ul>
+            <li>when symmetrical, the contour points may be assigned on one half-width and mirrored to  the other. Critical point letters are assigned left from the bottom to the top of the consignment and mirrored on the right side of the drawing.</li>
+        </ul>
+        <ul>
+            <li>when non-symmetrical, the contour points are assigned separately for the left and the right side of the contour. Critical point letters are assigned from the bottom left -half of the consignment to the top and clockwise the from the top to the bottom of the right-half. </li>
+        </ul>
         <p>image</p>
-        <p>In addition to height and width longitudinal dimensions also influence the gauge fouling, basically the longer the wagon, the narrower the wagon width.</p>
+        <p>In addition to height and width, the longitudinal dimension of the loads may also affect the gauge fouling. Basically the longer the wagon, the narrower the wagon width within the same loading gauge contour.</p>
         <p>&#160;</p>
         <table style="width: 100%;">
             <col />
@@ -25,52 +29,67 @@
             <col />
             <col />
             <col />
+            <col />
             <tbody>
                 <tr>
-                    <td>point's longitudinal<br />location
+                    <td>Point's in longitudinal<br />location
 </td>
                     <td>Symbol in gauge calculations
-<br /> Value in Application
-</td>
-                    <td>wagon without bogies <br /></td>
-                    <td>wagons on bogies</td>
-                    <td>the lifting swivel benches <br />of a pair of wagons</td>
+/<br /> Application
+Code</td>
+                    <td>Location</td>
+                    <td>Wagons without bogies <br /></td>
+                    <td>Wagons on bogies</td>
+                    <td>The lifting swivel benches <br />of a pair of wagons</td>
                 </tr>
                 <tr>
-                    <td>internal point</td>
-                    <td style="text-align: center;">ni
-</td>
+                    <td>Internal point</td>
+                    <td style="text-align: center;">n<sub>i</sub>
+/ #14</td>
+                    <td>Between</td>
                     <td>
-                        <p>located between </p>
-                        <p>the outer (outermost) axles</p>
+                        <p>The outer (outermost) axles</p>
                     </td>
-                    <td>between the pivots of the bogies
-</td>
-                    <td>of the carrier bridge, or between the pivots of the</td>
+                    <td>The axles of the bogies
+pivots</td>
+                    <td>The pivots of the wagon bridge, or between the pivots of the lifting swivel benches of a pair of wagons</td>
                 </tr>
                 <tr>
-                    <td>the midpoint</td>
-                    <td style="text-align: center;">ni max</td>
-                    <td>Half-way between
-the outer (outermost) axles
-</td>
-                    <td>Half way between the pivots of the bogies
-</td>
-                    <td>of the carrier bridge, or between the pivots of the</td>
+                    <td colspan="6">image</td>
                 </tr>
                 <tr>
-                    <td>outer point</td>
-                    <td style="text-align: center;">
-na
-</td>
-                    <td>beyond the outer axles</td>
+                    <td>The midpoint</td>
+                    <td style="text-align: center;">n<sub>i</sub> max / #14</td>
                     <td>
-beyond the bogie pivots
+                        <p>Half-way</p>
+                        <p>between </p>
+                    </td>
+                    <td>
+The outer (outermost) axles
 </td>
-                    <td>of the carrier bridge, or between the pivots of the</td>
+                    <td>The axles of the bogie pivots</td>
+                    <td>The pivots of the wagon bridge, or between the pivots of the lifting swivel benches of a pair of wagons</td>
+                </tr>
+                <tr>
+                    <td colspan="6">image</td>
+                </tr>
+                <tr>
+                    <td>Outer point</td>
+                    <td style="text-align: center;">
+n<sub>a</sub>
+/ #15</td>
+                    <td>Beyond </td>
+                    <td>The outer axles</td>
+                    <td>
+The axles of the bogie pivots</td>
+                    <td>The pivots of the wagon bridge, or between the pivots of the lifting swivel benches of a pair of wagons</td>
+                </tr>
+                <tr>
+                    <td colspan="6">image</td>
                 </tr>
             </tbody>
         </table>
-        <p>&#160;</p>
+        <p>Important: Bear in mind that an off-centre position of the centre of gravity of the load may require the load to be shifted from its longitudinally symmetrical position on the wagon to towards one side of the wagon in order to maintain an maximum allowed load on all the wheel sets of the wagon. In such a case, the determination of the critical points should be carried out for the target position of the load on the wagon.</p>
+        <p>Note: Critical Dimensions. After adding the values of the operating deviations and the allowance for curves or other components of the loading gauge calculations, the critical points become the critical dimensions of the consignment.</p>
     </body>
 </html>
